@@ -5,7 +5,7 @@
   <groupId>com.databricks</groupId>
   <artifactId>databricks-jdbc</artifactId>
   <!-- This value may be modified by a release script to reflect the current version of the driver. -->
-  <version>1.0.9-oss</version>
+  <version>3.0.6</version>
   <packaging>jar</packaging>
   <name>Databricks JDBC Driver</name>
   <description>Databricks JDBC Driver.</description>
@@ -40,48 +40,66 @@
     </repository>
   </distributionManagement>
   <properties>
-    <arrow.version>13.0.0</arrow.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <mockito.version>3.12.4</mockito.version>
-    <jackson.version>2.15.1</jackson.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <arrow.version>17.0.0</arrow.version>
+    <commons-lang3.version>3.18.0</commons-lang3.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <mockito.version>5.2.0</mockito.version>
+    <jackson.version>2.18.3</jackson.version>
     <log4j.version>2.22.1</log4j.version>
     <slf4j.version>2.0.13</slf4j.version>
     <google.guava.version>33.0.0-jre</google.guava.version>
     <junit.jupiter.version>5.9.2</junit.jupiter.version>
     <google.findbugs.annotations.version>3.0.1</google.findbugs.annotations.version>
+    <gson.version>2.13.2</gson.version>
     <immutables.value.version>2.9.2</immutables.value.version>
     <httpclient.version>4.5.14</httpclient.version>
+    <commons-configuration.version>2.10.1</commons-configuration.version>
     <commons-io.version>2.14.0</commons-io.version>
-    <databricks-sdk.version>0.60.0</databricks-sdk.version>
-    <httpcomponents5.version>5.2.2</httpcomponents5.version>
-    <resilience4j.version>1.7.0</resilience4j.version>
+    <databricks-sdk.version>0.69.0</databricks-sdk.version>
     <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
     <sql-logic-test.version>0.3</sql-logic-test.version>
-    <lz4-compression.version>1.8.0</lz4-compression.version>
+    <lz4-compression.version>1.10.1</lz4-compression.version>
     <thrift.version>0.19.0</thrift.version>
     <annotation.version>1.3.5</annotation.version>
     <slt.executor>dbsql</slt.executor>
     <slt.token>dummy-token</slt.token>
     <wiremock.version>3.5.4</wiremock.version>
-    <nimbusjose.version>9.40</nimbusjose.version>
-    <bouncycastle.version>1.78.1</bouncycastle.version>
+    <nimbusjose.version>10.0.2</nimbusjose.version>
+    <bouncycastle.version>1.79</bouncycastle.version>
+    <async-httpclient.version>5.3.1</async-httpclient.version>
+    <netty.version>4.2.6.Final</netty.version>
+    <grpc.version>1.71.0</grpc.version>
+    <resilience4j.version>1.7.0</resilience4j.version>
   </properties>
+  <dependencyManagement>
+    <!-- Force safe version of commons-lang3 https://nvd.nist.gov/vuln/detail/CVE-2025-48924 -->
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
+      </dependency>
+      <!-- Force safe version of Gson to fix CVE-2025-53864 -->
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>${gson.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
-    <dependency>
-      <groupId>org.apache.httpcomponents.client5</groupId>
-      <artifactId>httpclient5</artifactId>
-      <version>${httpcomponents5.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents.core5</groupId>
-      <artifactId>httpcore5</artifactId>
-      <version>${httpcomponents5.version}</version>
-    </dependency>
     <dependency>
       <groupId>com.databricks</groupId>
       <artifactId>databricks-sdk-java</artifactId>
       <version>${databricks-sdk.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-configuration2</artifactId>
+      <version>${commons-configuration.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
@@ -212,9 +230,54 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.lz4</groupId>
+      <groupId>at.yawk.lz4</groupId>
       <artifactId>lz4-java</artifactId>
       <version>${lz4-compression.version}</version>
+    </dependency>
+    <!-- The following dependency is added as a workaround to CVE-2023-33953-->
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-context</artifactId>
+      <version>${grpc.version}</version>
+    </dependency>
+    <!-- The following dependency is added as a workaround to CVE-2025-25193-->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <!-- The following dependency is added as a workaround to CVE-2024-49194-->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-buffer</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${annotation.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.wiremock</groupId>
+      <artifactId>wiremock</artifactId>
+      <version>${wiremock.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>${async-httpclient.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.core5</groupId>
+      <artifactId>httpcore5</artifactId>
+      <version>${async-httpclient.version}</version>
     </dependency>
     <dependency>
       <groupId>io.github.resilience4j</groupId>
@@ -227,21 +290,9 @@
       <version>${resilience4j.version}</version>
     </dependency>
     <dependency>
-      <groupId>jakarta.annotation</groupId>
-      <artifactId>jakarta.annotation-api</artifactId>
-      <version>${annotation.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock-jre8</artifactId>
-      <version>2.35.0</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-fileupload</groupId>
-          <artifactId>commons-fileupload</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.20.0</version>
     </dependency>
   </dependencies>
 
@@ -292,11 +343,19 @@
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <excludes>
-            <!-- Keep only heavy or environment-dependent exclusions -->
-            <exclude>**/DriverTest.java</exclude>
+            <exclude>**/DatabricksDriverExamples.java</exclude>
             <exclude>**/integration/**/*.java</exclude>
+            <exclude>**/ErrorTypes.java</exclude>
+            <exclude>**/ErrorCodes.java</exclude>
+            <exclude>**/ProxyTest.java</exclude>
+            <exclude>**/LoggingTest.java</exclude>
+            <exclude>**/SSLTest.java</exclude>
           </excludes>
-          <argLine>@{argLine}</argLine>
+          <argLine>
+            @{argLine}
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            -Dnet.bytebuddy.experimental=true
+          </argLine>
           <systemPropertyVariables>
             <com.databricks.jdbc.loggerImpl>JDKLOGGER</com.databricks.jdbc.loggerImpl>
             <java.util.logging.config.file>${project.basedir}/src/test/resources/logging.properties</java.util.logging.config.file>
@@ -333,23 +392,45 @@
               <version>${immutables.value.version}</version>
             </path>
           </annotationProcessorPaths>
-          <testExcludes>
-            <testExclude>**/integration/**</testExclude>
-            <testExclude>**/fakeservice/**</testExclude>
-            <testExclude>**/DriverTest.java</testExclude>
-            <testExclude>**/DatabricksDriverExamples.java</testExclude>
-            <testExclude>**/DatabricksSdkClientTest.java</testExclude>
-          </testExcludes>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.diffplug.spotless</groupId>
-        <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.17.5</version>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>12.1.6</version>
+        <configuration>
+          <formats>
+            <format>HTML</format>
+            <format>JSON</format>
+          </formats>
+            <!--
+              Setting threshold to 7.0 to catch both Critical (8.0-10.0) and High (7.0-7.9) severity vulnerabilities.
+              This helps us identify and address significant security risks early in the development process.
+           -->
+          <failBuildOnCVSS>7</failBuildOnCVSS>
+          <nvdApiKey>${nvd.api.key}</nvdApiKey>
+          <nvdMaxRetryCount>10</nvdMaxRetryCount>
+          <nvdApiDelay>4000</nvdApiDelay>
+          <ossindexAnalyzerEnabled>true</ossindexAnalyzerEnabled>
+          <ossindexUsername>${ossindex.username}</ossindexUsername>
+          <ossindexPassword>${ossindex.password}</ossindexPassword>
+        </configuration>
         <executions>
           <execution>
             <goals>
               <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.39.0</version>
+        <executions>
+          <execution>
+            <id>format</id>
+            <goals>
               <goal>apply</goal>
             </goals>
             <phase>compile</phase>
@@ -358,7 +439,7 @@
         <configuration>
           <java>
             <googleJavaFormat>
-              <version>1.7</version>
+              <version>1.18.1</version>
             </googleJavaFormat>
           </java>
         </configuration>
@@ -442,10 +523,6 @@
                   <shadedPattern>com.databricks.internal.io</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>jakarta.servlet</pattern>
-                  <shadedPattern>com.databricks.internal.jakarta.servlet</shadedPattern>
-                </relocation>
-                <relocation>
                   <pattern>net.jpountz</pattern>
                   <shadedPattern>com.databricks.internal.jpountz</shadedPattern>
                 </relocation>
@@ -470,8 +547,16 @@
                   <shadedPattern>com.databricks.internal.json</shadedPattern>
                 </relocation>
                 <relocation>
+                  <pattern>org.locationtech.jts</pattern>
+                  <shadedPattern>com.databricks.internal.jts</shadedPattern>
+                </relocation>
+                <relocation>
                   <pattern>org.osgi</pattern>
                   <shadedPattern>com.databricks.internal.osgi</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.slf4j</pattern>
+                  <shadedPattern>com.databricks.internal.slf4j</shadedPattern>
                 </relocation>
               </relocations>
               <filters>
@@ -491,8 +576,8 @@
                   <excludes>
                     <exclude>edu/**</exclude>
                     <exclude>javax/**</exclude>
+                    <exclude>jakarta/**</exclude>
                     <exclude>net/jcip/**</exclude>
-                    <exclude>oauth/**</exclude>
                   </excludes>
                 </filter>
               </filters>
@@ -514,23 +599,6 @@
     </plugins>
   </build>
   <profiles>
-    <profile>
-      <id>test-args-jdk8</id>
-      <activation>
-        <jdk>(,1.9)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <!-- Local deploy for testing -->
       <id>local-deploy</id>
@@ -581,9 +649,31 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.6.1</version>
+            <executions>
+              <execution>
+                <id>attach-uber-minimal-pom</id>
+                <goals>
+                  <goal>attach-artifact</goal>
+                </goals>
+                <phase>package</phase>
+                <configuration>
+                  <artifacts>
+                    <artifact>
+                      <file>${project.basedir}/uber-minimal-pom.xml</file>
+                      <type>pom</type>
+                    </artifact>
+                  </artifacts>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.3.0</version>
+            <version>3.3.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -596,7 +686,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.6.0</version>
+            <version>3.8.0</version>
             <configuration>
               <doclint>none</doclint>
               <sourcepath>${project.build.sourceDirectory}:${project.build.directory}/generated-sources/annotations</sourcepath>
@@ -614,71 +704,38 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <version>1.6</version>
+            <configuration>
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+              <passphrase>${env.GPG_PASSPHRASE}</passphrase>
+            </configuration>
             <executions>
               <execution>
+                <id>sign-artifacts</id>
                 <goals>
-                  <!-- Refer: https://maven.apache.org/plugins/maven-gpg-plugin/sign-and-deploy-file-mojo.html -->
-                  <goal>sign-and-deploy-file</goal>
+                  <goal>sign</goal>
                 </goals>
-                <phase>deploy</phase>
-                <configuration>
-                  <file>${project.build.directory}/${project.build.finalName}.jar</file>
-                  <repositoryId>ossrh</repositoryId>
-                  <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                  <!-- Prevent gpg from using pinentry programs -->
-                  <gpgArguments>
-                    <arg>--pinentry-mode</arg>
-                    <arg>loopback</arg>
-                  </gpgArguments>
-                  <!-- Custom reduced pom file for fat jar -->
-                  <pomFile>${project.basedir}/uber-minimal-pom.xml</pomFile>
-                  <sources>${project.build.directory}/${project.build.finalName}-sources.jar</sources>
-                  <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.jar</javadoc>
-                  <files>${project.build.directory}/${project.build.finalName}-thin.jar</files>
-                  <types>jar</types>
-                  <classifiers>thin</classifiers>
-                </configuration>
+                <phase>verify</phase>
               </execution>
             </executions>
           </plugin>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>2.8.2</version>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.8.0</version>
+            <extensions>true</extensions>
             <configuration>
-              <skip>true</skip>
+              <publishingServerId>central</publishingServerId>
+              <autoPublish>true</autoPublish>
+              <waitUntil>published</waitUntil>
             </configuration>
           </plugin>
-<!--          <plugin>-->
-<!--            <groupId>org.sonatype.plugins</groupId>-->
-<!--            <artifactId>nexus-staging-maven-plugin</artifactId>-->
-<!--            <version>1.6.13</version>-->
-<!--            <extensions>true</extensions>-->
-<!--            <configuration>-->
-<!--              <serverId>ossrh</serverId>-->
-<!--              <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-<!--              <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-<!--              <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>-->
-<!--            </configuration>-->
-<!--            <executions>-->
-<!--              <execution>-->
-<!--                <id>nexus-deploy</id>-->
-<!--                <phase>deploy</phase>-->
-<!--                <goals>-->
-<!--                  <goal>close</goal>-->
-<!--                  <goal>release</goal>-->
-<!--                </goals>-->
-<!--              </execution>-->
-<!--            </executions>-->
-<!--          </plugin>-->
         </plugins>
       </build>
-      <distributionManagement>
-        <repository>
-          <id>ossrh</id>
-          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-      </distributionManagement>
     </profile>
+    
   </profiles>
+  
 </project>
